Fix tab spacing, remove commented code, general cleanup

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -66,6 +66,7 @@
  	position: relative;
  	left: 40%;
  	padding-top: 10px;
+  max-width: 200px;
  }
 
  .politician-search-field, .cycle-input, .submit-button {
@@ -76,6 +77,11 @@
  	padding-left: 5px;
  	margin-bottom: 10px;
  	text-align: center;
+ }
+
+ .popular-searches {
+  text-align: center;
+  margin-top: 3%;
  }
 
  .padded-row {
